tags fix on PhotoCard in HomePage. Underline still visibile

--- a/src/components/PhotoCard/PhotoCard.scss
+++ b/src/components/PhotoCard/PhotoCard.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   gap: 0.0625rem;
   margin-bottom: 1rem;
-
+  text-decoration: none;
 
   &__image-wrapper {
     position: relative;
@@ -35,9 +35,10 @@
     border-bottom: $secondary-seaGreen 0.0625rem solid;
     padding: 0.375rem 0.75rem;
     border-top-left-radius: 0.5rem;
-    font-weight: bold;
-    font-size: 14px;
+    font-weight: medium;
+    font-size: 16px;
     font-family: "Outfit";
+    color:black;
   }
 
 
@@ -53,7 +54,17 @@
     margin-right: 0.9375rem;
     background-color: $secondary-sage ;
     font-family: "Outfit";
+    text-decoration: none;
+    color:black;
   }
-
+  &__tag {
+    background: $secondary-white;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.5rem;
+    font-size: 0.875rem;
+    border: 0.1rem solid #B7CEC9;
+    font-weight: light;
+    text-decoration: none;
+  }
   
 }
